--- a/src/app/microwaves/microwaves.component.html
+++ b/src/app/microwaves/microwaves.component.html
@@ -59,7 +59,7 @@
          <!-- this is the start of the whole block  -->
     <div class="col-lg-4 col-md-6 mt-2">
         <div class="card" style="width: 18rem;">
-            <img src="../../assets/img/one.png" class="card-img-top" alt="picture">
+            <img src="assets/img/one.png" class="card-img-top" alt="picture">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <button class="btn btn-primary"><a class="text-white" href="#">Click </a></button>
